Add API Key management to settings and group rights

--- a/Frontend/views/groups.html
+++ b/Frontend/views/groups.html
@@ -707,6 +707,9 @@
                                         <li><input type="checkbox" id="settings_backup" class="form-check-input"><label
                                                 class="checkbox-label" for="settings_backup">Backup Settings</label>
                                         </li>
+                                        <li><input type="checkbox" id="settings_apiKey" class="form-check-input"><label
+                                                class="checkbox-label" for="settings_apiKey">API Key Settings</label>
+                                        </li>
                                     </ul>
                                 </li>
                                 <li>
